// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-textarea should render with _label="Texteingabe" _rows=5 _value="Kleiner Text im Eingabefeld" _placeholder="Hier steht ein Platzhaltertext" _disabled=true 1`] = `
<kol-textarea class="has-value kol-textarea">
  <template shadowrootmode="open">
    <kol-input _currentlength="27" _disabled="" _hint="" _id="id-nonce" _label="Texteingabe" _tooltipalign="top" class="textarea" role="presentation">
      <span slot="label">
        <span>
          Texteingabe
        </span>
      </span>
      <div slot="input"><textarea autocapitalize="off" autocorrect="off" disabled="" id="id-nonce" placeholder="Hier steht ein Platzhaltertext" rows="5" spellcheck="false" value="Kleiner Text im Eingabefeld" style="resize: vertical;"></textarea>
      </div>
    </kol-input>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Texteingabe" _rows=5 _value="Kleiner Text im Eingabefeld" _placeholder="Hier steht ein Platzhaltertext" _hint="Hinweis" _msg={"_type":"error","_description":"Es ist ein Fehler aufgetreten"} 1`] = `
<kol-textarea class="has-value kol-textarea">
  <template shadowrootmode="open">
    <kol-input _currentlength="27" _hint="Hinweis" _id="id-nonce" _label="Texteingabe" _tooltipalign="top" class="textarea" role="presentation">
      <span slot="label">
        <span>
          Texteingabe
        </span>
      </span>
      <div slot="input"><textarea aria-describedby="id-nonce-hint" autocapitalize="off" autocorrect="off" id="id-nonce" placeholder="Hier steht ein Platzhaltertext" rows="5" spellcheck="false" value="Kleiner Text im Eingabefeld" style="resize: vertical;"></textarea>
      </div>
    </kol-input>
  </template>
</kol-textarea>
`;

exports[`kol-textarea should render with _label="Texteingabe" _rows=5 _value="Kleiner Text im Eingabefeld" _placeholder="Hier steht ein Platzhaltertext" _touched=true 1`] = `
<kol-textarea _touched="" class="has-value kol-textarea">
  <template shadowrootmode="open">
    <kol-input _alert="" _currentlength="27" _hint="" _id="id-nonce" _label="Texteingabe" _tooltipalign="top" _touched="" class="textarea" role="presentation">
      <span slot="label">
        <span>
          Texteingabe
        </span>
      </span>
      <div slot="input"><textarea autocapitalize="off" autocorrect="off" id="id-nonce" placeholder="Hier steht ein Platzhaltertext" rows="5" spellcheck="false" value="Kleiner Text im Eingabefeld" style="resize: vertical;"></textarea>
      </div>
    </kol-input>
  </template>
</kol-textarea>
`;
